--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stacksjs/httx",
+  "name": "httx",
   "type": "module",
   "version": "0.0.0",
   "description": " A modern command-line & library HTTP client, for the API era. Like httpie, written in & for TypeScript.",
