--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "bun-plugin-dtsx": "^0.21.9",
     "bunfig": "^0.5.3",
     "cac": "^6.7.14",
+    "changelogen": "^0.5.7",
     "consola": "^3.4.0",
     "neverthrow": "^8.1.1",
     "typescript": "^5.7.3",
