--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@vite-pwa/vitepress": "^0.5.3",
     "bun-plugin-dtsx": "^0.21.9",
     "bunfig": "^0.5.3",
+    "bumpp": "^10.0.1",
     "cac": "^6.7.14",
     "changelogen": "^0.5.7",
     "consola": "^3.4.0",
