--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stacksjs/httx",
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": " A modern command-line & library HTTP client, for the API era. Like httpie, written in & for TypeScript.",
   "author": "Chris Breuer <chris@stacksjs.org>",
   "license": "MIT",
@@ -49,9 +49,9 @@
     "lint": "bunx --bun eslint .",
     "lint:fix": "bunx --bun eslint . --fix",
     "fresh": "bunx rimraf node_modules/ bun.lock && bun i",
-    "changelog": "bunx changelogen --output CHANGELOG.md",
+    "changelog": "changelogen --output CHANGELOG.md",
     "prepublishOnly": "bun --bun run build && bun run compile:all",
-    "release": "bun run changelog && bunx bumpp package.json --all",
+    "release": "bun run changelog && bumpp package.json --all",
     "test": "bun test",
     "typecheck": "bunx tsc --noEmit",
     "dev:docs": "bun --bun vitepress dev docs",
