--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,10 +43,10 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            bin/rpx-linux-x64
-            bin/rpx-linux-arm64
-            bin/rpx-windows-x64.exe
-            bin/rpx-darwin-x64
-            bin/rpx-darwin-arm64
+            bin/httx-linux-x64
+            bin/httx-linux-arm64
+            bin/httx-windows-x64.exe
+            bin/httx-darwin-x64
+            bin/httx-darwin-arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
