chore: add cursor rules and add stacks docs

--- a/package.json
+++ b/package.json
@@ -59,11 +59,9 @@
     "preview:docs": "bun --bun vitepress preview docs"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.7",
-    "@shikijs/vitepress-twoslash": "^1.29.2",
+    "@stacksjs/docs": "^0.69.3",
     "@stacksjs/eslint-config": "^3.13.1-beta.2",
     "@types/bun": "^1.2.2",
-    "@vite-pwa/vitepress": "^0.5.3",
     "bumpp": "^10.0.3",
     "bun-plugin-dtsx": "^0.21.9",
     "bunfig": "^0.7.0",
@@ -72,11 +70,7 @@
     "consola": "^3.4.0",
     "neverthrow": "^8.1.1",
     "typescript": "^5.7.3",
-    "unocss": "^65.5.0",
-    "unplugin-icons": "^22.0.0",
-    "unplugin-vue-components": "^28.1.0",
-    "vite-plugin-pwa": "^0.21.1",
-    "vitepress": "^1.6.3"
+    "unocss": "^65.5.0"
   },
   "overrides": {
     "unconfig": "0.3.10"
