--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
   "devDependencies": {
     "@stacksjs/docs": "^0.70.23",
     "@stacksjs/eslint-config": "^3.13.1-beta.2",
+    "@stacksjs/gitlint": "^0.1.5",
     "@types/bun": "^1.2.13",
     "bumpp": "^10.1.0",
+    "bun-git-hooks": "^0.2.16",
     "bun-plugin-dtsx": "^0.21.12",
     "bunfig": "^0.8.5",
     "cac": "^6.7.14",
@@ -82,10 +84,12 @@
   "overrides": {
     "unconfig": "0.3.10"
   },
-  "simple-git-hooks": {
-    "pre-commit": "bunx lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,ts}": "bunx eslint . --fix"
+  "git-hooks": {
+    "pre-commit": {
+      "staged-lint": {
+        "*.{js,ts,json,yaml,yml,md}": "bunx --bun eslint . --fix"
+      }
+    },
+    "commit-msg": "bunx gitlint .git/COMMIT_EDITMSG"
   }
 }
