--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "changelog": "bunx logsmith --verbose",
     "changelog:generate": "bunx logsmith --output CHANGELOG.md",
     "release": "bun run changelog:generate && bunx bumpx prompt --recursive",
-    "postinstall": "bunx git-hooks",
     "typecheck": "bunx tsc --noEmit",
     "dev:docs": "bun --bun vitepress dev docs",
     "build:docs": "bun --bun vitepress build docs",
@@ -68,22 +67,9 @@
     "zip:darwin-arm64": "zip -j bin/httx-darwin-arm64.zip bin/httx-darwin-arm64"
   },
   "devDependencies": {
-    "@stacksjs/bumpx": "^0.1.84",
-    "@stacksjs/clarity": "^0.3.23",
     "@stacksjs/docs": "^0.70.23",
     "@stacksjs/eslint-config": "^4.14.0-beta.3",
-    "@stacksjs/gitlint": "^0.1.5",
-    "@stacksjs/logsmith": "^0.1.18",
-    "@types/bun": "^1.2.23",
-    "buddy-bot": "^0.9.7",
-    "bun-git-hooks": "^0.2.19",
-    "bun-plugin-dtsx": "^0.21.12",
-    "bunfig": "^0.15.0",
-    "cac": "^6.7.14",
-    "consola": "^3.4.2",
-    "neverthrow": "^8.2.0",
-    "typescript": "^5.9.2",
-    "unocss": "^66.5.2"
+    "better-dx": "^0.1.7"
   },
   "overrides": {
     "unconfig": "0.3.10"
@@ -95,5 +81,8 @@
       }
     },
     "commit-msg": "bunx gitlint --edit .git/COMMIT_EDITMSG"
+  },
+  "dependencies": {
+    "ts-error-handling": "^0.1.0"
   }
 }
